final-dataops-project/07-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlservice
  template:
    metadata:
      labels:
        app: mlservice
    spec:
      containers:
        - name: mlservice
          image: andreosadchy/mlservice-hw24:latest
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
