final-dataops-project/07-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlservice-svc
spec:
  selector:
    app: mlservice
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
