final-dataops-project/07-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlservice-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mlservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlservice-svc
                port:
                  number: 80
